Add link of github in about article

--- a/about/index.html
+++ b/about/index.html
@@ -134,11 +134,12 @@
           <h2>Transparence et Collaboration</h2>
           <p>
             Chez GP-Prognostics.fr, nous croyons en la transparence. Notre code
-            source est ouvert à tous sur GitHub, encourageant la collaboration
-            pour améliorer notre site. Nous sommes déterminés à offrir une
-            expérience équitable pour tous les fans du GP Explorer. Si vous avez
-            des suggestions, contactez-nous via Discord à libelo.dev. Votre
-            opinion compte !
+            source est ouvert à tous sur
+            <a href="https://github.com/JonesJugHead/gp-prognostics">github</a>
+            encourageant la collaboration pour améliorer notre site. Nous sommes
+            déterminés à offrir une expérience équitable pour tous les fans du
+            GP Explorer. Si vous avez des suggestions, contactez-nous via
+            Discord à libelo.dev. Votre opinion compte !
           </p>
         </article>
 
